# computational-geometry

./: .gitattributes  README.md  dune-project
Assets/Resources/Prefabs/: Blue Circle.prefab  Blue Line.prefab  Orange Cross.prefab  Purple Circle.prefab  Purple Line.prefab
Assets/Scenes/: ConvexHull.unity  SegmentsIntersections.unity
Assets/Scripts/: GraphicsSettings.cs
Assets/Scripts/ConvexHull/: ConvexHull.cs
Assets/Scripts/SegmentsIntersections/: SegmentsIntersections.cs
Assets/Scripts/Utils/: Extensions.cs  Point.cs  PointSpawner.cs  SegmentDisplay.cs
Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
ProjectSettings/: ProjectSettings.asset
lib/algorithms/: convex_hull.ml  dune  segments_intersections.ml
lib/data_structures/: array_list.ml  array_list.mli  dune
lib/graphics_utils/: dune  graphics_utils.ml  graphics_utils.mli
lib/math/vectors/: dune  vec_2d.ml
lib/read_utils/: dune  read_utils.ml
lib/scene/: dune  scene.ml
scenes/: convex_hull.ml  dune  segments_intersections.ml
